[package]
name = "jsc"
version = "0.1.0"
authors = ["Phil Eaton <philneaton95@gmail.com>"]

[dependencies]
clap = "~2.27.0"
easter = { version = "~0.0.5", git = "https://github.com/dherman/esprit" }
esprit = { version = "~0.0.5", git = "https://github.com/dherman/esprit" }
joker = { version = "~0.0.5", git = "https://github.com/dherman/esprit" }
serde = "~1.0"
serde_json = "~1.0"
serde_derive = "~1.0"